Cập nhật contact , about us,

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="icon" href="../EXE101_Website/assets/images/Babycare.jpg">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>PHPJabbers.com | Free Job Agency Website Template</title>
@@ -38,7 +38,7 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Baby <em>Care</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Babycare</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -366,8 +366,8 @@
                           <h5 class="mb-1">Babycare</h5>
                           <p class="small mb-0 text-muted">Dịch vụ chăm sóc sức khỏe tại nhà</p>
                           <p class="small mb-0 text-muted"><i class="fas fa-phone"></i> 1900 123 456</p>
-                          <p class="small mb-0 text-muted"><i class="fas fa-envelope"></i> support@bluecare.vn</p>
-                          <p class="small text-muted"><i class="fas fa-map-marker-alt"></i> 123 Đường ABC, Quận 1, TP.HCM</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-envelope"></i> support@Babycare.vn</p>
+                          <p class="small text-muted"><i class="fas fa-map-marker-alt"></i> 123 Đường ABC, Quận Ngũ Hành Sơn , TP.ĐN</p>
                       </div>
                   </div>
               </div>
