--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
-  <head>
-
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Chăm sóc bé và mẹ sau sinh - Babycare">
     <meta name="author" content="">
     <link rel="icon" href="assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>PHPJabbers.com | Free Job Agency Website Template</title>
+    <title>Babycare | Chăm sóc bé và mẹ sau sinh</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,10 +18,9 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+</head>
 
-  </head>
-
-  <body>
+<body>
 
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
@@ -38,13 +36,13 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Job Agency <em>Website</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Babycare</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home
                       <span class="sr-only">(current)</span>
                     </a>
@@ -66,135 +64,164 @@
                     </div>
                 </li>
                 
-                <li class="nav-item active"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
+
     <!-- Page Content -->
     <div class="page-heading contact-heading header-text" style="background-image: url(assets/images/heading-4-1920x500.jpg);">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-content">
-              <h4>Lorem ipsum dolor</h4>
-              <h2>Contact Us</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="text-content">
+                        <h4>Chăm sóc toàn diện</h4>
+                        <h2>Liên hệ với chúng tôi</h2>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-
 
     <div class="find-us">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Our Location on Maps</h2>
-            </div>
-          </div>
-          <div class="col-md-8">
-<!-- How to change your own map point
-	1. Go to Google Maps
-	2. Click on your location point
-	3. Click "Share" and choose "Embed map" tab
-	4. Copy only URL and paste it within the src="" field below
--->
-            <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="330px" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="left-content">
-              <h4>About our office</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed voluptate nihil eumester consectetur similiqu consectetur.<br><br>Lorem ipsum dolor sit amet, consectetur adipisic elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti.</p>
-              <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    
-    <div class="send-message">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Send us a Message</h2>
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="contact-form">
-              <form id="contact" action="" method="post">
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" placeholder="E-Mail Address" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                    </fieldset>
-                  </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h2>Vị trí của chúng tôi trên bản đồ</h2>
+                    </div>
                 </div>
-              </form>
+                <div class="col-md-8">
+                    <div id="map">
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.9727461992024!2d108.2606809!3d15.962799599999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142106768cbda63%3A0x7127f29ce3fe497e!2zVsSDbiBUaeG6v24gRMWpbmcsIMSQaeG7h24gTmfhu41jLCDEkGnhu4duIELDoG4sIFF14bqjbmcgTmFt!5e0!3m2!1svi!2s!4v1741770917062!5m2!1svi!2s" width="100%" height="330px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>" 
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="left-content">
+                        <h4>Thông tin văn phòng</h4>
+                        <p>Chúng tôi cung cấp nền tảng gồm nhiều các dịch vụ chăm sóc bé và mẹ sau sinh ,... với đội ngũ chuyên gia tận tâm. Hãy liên hệ ngay để được tư vấn!</p>
+                        <ul class="social-icons">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <img src="assets/images/team_01.jpg" class="img-fluid" alt="">
-
-            <h5 class="text-center" style="margin-top: 15px;">John Doe</h5>
-          </div>
         </div>
-      </div>
     </div>
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
+    <div class="send-message">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h2>Gửi tin nhắn cho chúng tôi</h2>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="contact-form">
+                        <form id="contact" action="" method="post">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <input name="name" type="text" class="form-control" id="name" placeholder="Họ và tên" required="">
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <input name="email" type="text" class="form-control" id="email" placeholder="Địa chỉ Email" required="">
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Tiêu đề" required="">
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Nội dung" required=""></textarea>
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <button type="submit" id="form-submit" class="filled-button">Gửi tin nhắn</button>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/images/web.png" class="img-fluid" alt="Nhân viên tư vấn">
+                    <h5 class="text-center" style="margin-top: 15px;">Minh Tâm</h5>
+                </div>
             </div>
+        </div>
+    </div>
+
+     <footer class="bg-dark text-white py-4">
+      <div class="container">
+          <div class="row align-items-center">
+              <!-- Thông tin công ty và liên hệ -->
+              <div class="col-md-6 mb-4">
+                  <div class="d-flex align-items-center">
+                    <img src="../job-website-template/assets/images/Babycare.jpg" alt="Babycare Logo" class="img-fluid me-3" style="height: 60px;">
+                    <div>
+                          <h5 class="mb-1">Babycare</h5>
+                          <p class="small mb-0 text-muted">Dịch vụ chăm sóc sức khỏe tại nhà</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-phone"></i> 1900 123 456</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-envelope"></i> support@Babycare.vn</p>
+                          <p class="small text-muted"><i class="fas fa-map-marker-alt"></i> 123 Đường ABC, Quận Ngũ Hành Sơn , TP.ĐN</p>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Dịch vụ và theo dõi -->
+              <div class="col-md-6 mb-4">
+                  <div class="row">
+                      <!-- Dịch vụ -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Dịch vụ</h5>
+                          <ul class="list-unstyled">
+                              <li><a href="#" class="text-white text-decoration-none">Chăm sóc trẻ tại nhà</a></li>
+                              <!-- <li><a href="#" class="text-white text-decoration-none">Xét nghiệm tại nhà</a></li> -->
+                              <li><a href="#" class="text-white text-decoration-none">Chăm sóc mẹ sau sinh</a></li>
+                              <li><a href="#" class="text-white text-decoration-none">Chăm sóc người cao tuổi</a></li>
+                          </ul>
+                      </div>
+                      <!-- Theo dõi chúng tôi -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Theo dõi chúng tôi</h5>
+                          <div>
+                              <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                              <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
+          <div class="text-center pt-3 border-top mt-4">
+            <p class="mb-0 text-muted">&copy; 2025 Babycare. All rights reserved. | Designed by 
+                <a href="https://bluecare.vn" class="text-white text-decoration-none">Babycare.vn</a>
+            </p>
         </div>
       </div>
-    </footer>
-
+  </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-
     <!-- Additional Scripts -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
-  </body>
+</body>
 
 </html>
