--- a/job-details.html
+++ b/job-details.html
@@ -36,43 +36,27 @@
     <!-- ***** Preloader End ***** -->
 
     <!-- Header -->
-    <header class="">
+    <header>
       <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>BABY CARE <em>Website</em></h2></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home
-                      <span class="sr-only">(current)</span>
-                    </a>
-                </li> 
-
-                <li class="nav-item active"><a class="nav-link" href="jobs.html">Jobs</a></li>
-
-                <li class="nav-item"><a class="nav-link" href="about-us.html">About us</a></li>
-
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">More</a>
-                    
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="team.html">Team</a>
-                      <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                      <a class="dropdown-item" href="terms.html">Terms</a>
-                    </div>
-                </li>
-                
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-            </ul>
+          <div class="container">
+              <a class="navbar-brand" href="index.html"><h2>Babycare</h2></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item active">
+                          <a class="nav-link" href="index.html">Trang chủ</a>
+                      </li>
+                      <li class="nav-item"><a class="nav-link" href="services.html">Dịch vụ</a></li>
+                      <li class="nav-item"><a class="nav-link" href="about-us.html">Giới thiệu</a></li>
+                      <li class="nav-item"><a class="nav-link" href="blog.html">Bài viết</a></li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html">Liên hệ</a></li>
+                  </ul>
+              </div>
           </div>
-        </div>
       </nav>
-    </header>
+  </header>
 
     <!-- Page Content -->
     <div class="page-heading about-heading header-text" style="background-image: url(assets/images/heading-6-1920x500.jpg);">
