--- a/jobs.html
+++ b/jobs.html
@@ -81,7 +81,7 @@
           <div class="col-md-12">
             <div class="text-content">
          
-              <h2>Jobs</h2>
+              <h2>Các công việc theo giờ </h2>
             </div>
           </div>
         </div>
