--- a/job-details.html
+++ b/job-details.html
@@ -80,7 +80,7 @@
               <p class="lead">
                    <i class="fa fa-map-marker"></i> Viet Nam &nbsp;&nbsp;
                    <i class="fa fa-calendar"></i> 15-05-2025 &nbsp;&nbsp;
-                   <i class="fa fa-file"></i> Hợp ĐồngĐồng
+                   <i class="fa fa-file"></i> Hợp Đồng 
               </p>
 
               <br>
@@ -167,7 +167,7 @@
 
           <div class="col-md-3">
             <div class="section-heading">
-              <h2>Thông tin liên lạclạc</h2>
+              <h2>Thông tin liên lạc </h2>
             </div>
             
             <div class="left-content">
