--- a/blog-details.html
+++ b/blog-details.html
@@ -193,17 +193,58 @@
       </div>
     </div>
 
-    <footer>
+    <footer class="bg-dark text-white py-4">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
-            </div>
+          <div class="row align-items-center">
+              <!-- Company Information and Contact -->
+              <div class="col-md-6 mb-4">
+                  <div class="d-flex align-items-center">
+                      <img src="../job-website-template/assets/images/Babycare.jpg" alt="Babycare Logo" class="img-fluid me-3" style="height: 60px;">
+                      <div>
+                          <h5 class="mb-1">Babycare</h5>
+                          <p class="small mb-0 text-muted">Home Health Care Services</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-phone"></i> 1900 123 456</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-envelope"></i> support@Babycare.vn</p>
+                          <p class="small text-muted"><i class="fas fa-map-marker-alt"></i> 123 ABC Street, Ngu Hanh Son District, Da Nang City</p>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Services and Follow Us -->
+              <div class="col-md-6 mb-4">
+                  <div class="row">
+                      <!-- Services -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Services</h5>
+                          <ul class="list-unstyled">
+                              <li><a href="#" class="text-white text-decoration-none">Home Childcare</a></li>
+                              <!-- <li><a href="#" class="text-white text-decoration-none">At-home Testing</a></li> -->
+                              <li><a href="#" class="text-white text-decoration-none">Postpartum Care</a></li>
+                              <li><a href="#" class="text-white text-decoration-none">Elderly Care</a></li>
+                          </ul>
+                      </div>
+                      <!-- Follow Us -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Follow Us</h5>
+                          <div>
+                              <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                              <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
+          <!-- Footer Bottom -->
+          <div class="text-center pt-3 border-top mt-4">
+              <p class="mb-0 text-muted">&copy; 2025 Babycare. All rights reserved. | Designed by 
+                  <a href="https://bluecare.vn" class="text-white text-decoration-none">Babycare.vn</a>
+              </p>
+          </div>
       </div>
-    </footer>
+  </footer>
+  
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
