--- a/team.html
+++ b/team.html
@@ -79,8 +79,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="text-content">
-              <h4>Lorem ipsum dolor</h4>
-              <h2>Our Team Members</h2>
+              <h4>Babycare</h4>
+              <h2>team members</h2>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_01.jpg" alt="">
+                <img src="assets/images/web.png" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -106,16 +106,15 @@
                 </div>
               </div>
               <div class="down-content">
-                <h4>Johnny William</h4>
-                <span>CO-Founder</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Minh Tâm </h4>
+                <span>Leader</span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_02.jpg" alt="">
+                <img src="assets/images/Thang.png" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -128,16 +127,15 @@
                 </div>
               </div>
               <div class="down-content">
-                <h4>Karry Pitcher</h4>
-                <span>Product Expert</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Cao Thắng</h4>
+                <span>Dev</span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_03.jpg" alt="">
+                <img src="assets/images/tam.png" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -150,16 +148,15 @@
                 </div>
               </div>
               <div class="down-content">
-                <h4>Michael Soft</h4>
-                <span>Chief Marketing</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Minh Tâm</h4>
+                <span>Design</span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="">
+                <img src="assets/images/vantoan.png" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -172,16 +169,15 @@
                 </div>
               </div>
               <div class="down-content">
-                <h4>Mary Cool</h4>
-                <span>Product Specialist</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Văn Toàn</h4>
+                <span>DEV</span>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="">
+                <img src="assets/images/vanhuy.png" alt="">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -194,60 +190,76 @@
                 </div>
               </div>
               <div class="down-content">
-                <h4>George Walker</h4>
-                <span>Product Photographer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
+                <h4>Văn Huy</h4>
+                <span>Dev</span>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Kate Town</h4>
-                <span>General Manager</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer>
+          
+      </div> 
+    </div> 
+    <footer class="bg-dark text-white py-4">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
-            </div>
+          <div class="row align-items-center">
+              <!-- Company Information and Contact -->
+              <div class="col-md-6 mb-4">
+                  <div class="d-flex align-items-center">
+                      <img src="../job-website-template/assets/images/Babycare.jpg" alt="Babycare Logo" class="img-fluid me-3" style="height: 60px;">
+                      <div>
+                          <h5 class="mb-1">Babycare</h5>
+                          <p class="small mb-0 text-muted">Home Health Care Services</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-phone"></i> 1900 123 456</p>
+                          <p class="small mb-0 text-muted"><i class="fas fa-envelope"></i> support@Babycare.vn</p>
+                          <p class="small text-muted"><i class="fas fa-map-marker-alt"></i> 123 ABC Street, Ngu Hanh Son District, Da Nang City</p>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Services and Follow Us -->
+              <div class="col-md-6 mb-4">
+                  <div class="row">
+                      <!-- Services -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Services</h5>
+                          <ul class="list-unstyled">
+                              <li><a href="#" class="text-white text-decoration-none">Home Childcare</a></li>
+                              <!-- <li><a href="#" class="text-white text-decoration-none">At-home Testing</a></li> -->
+                              <li><a href="#" class="text-white text-decoration-none">Postpartum Care</a></li>
+                              <li><a href="#" class="text-white text-decoration-none">Elderly Care</a></li>
+                          </ul>
+                      </div>
+                      <!-- Follow Us -->
+                      <div class="col-md-6">
+                          <h5 class="text-uppercase mb-3">Follow Us</h5>
+                          <div>
+                              <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                              <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                              <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
+          <!-- Footer Bottom -->
+          <div class="text-center pt-3 border-top mt-4">
+              <p class="mb-0 text-muted">&copy; 2025 Babycare. All rights reserved. | Designed by 
+                  <a href="https://bluecare.vn" class="text-white text-decoration-none">Babycare.vn</a>
+              </p>
+          </div>
       </div>
-    </footer>
-
+  </footer>
+  
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <!-- Additional Scripts -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/owl.js"></script>
-
   </body>
-
 </html>
